# panesmith

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/panesmith/: Cargo.toml  README.md
crates/panesmith-attach/: Cargo.toml  LICENSE  README.md
crates/panesmith-attach/src/: attach.rs  crossterm_host.rs  detach.rs  lib.rs  session.rs  test_harness.rs  tests.rs
crates/panesmith-attach/src/detach/: tests.rs
crates/panesmith-attach/src/test_harness/: tests.rs
crates/panesmith-attach/tests/: live_crossterm_attach.rs
crates/panesmith-core/: Cargo.toml  README.md
crates/panesmith-core/src/: command.rs  default_surface.rs  detach_encoding.rs  encoder.rs  error.rs  event.rs  input.rs  input_transaction.rs  lib.rs  manager.rs  mode_overlay.rs  pane.rs  pty.rs  repro.rs  tests.rs  transcript.rs  vt100_surface.rs
crates/panesmith-core/src/default_surface/: tests.rs
crates/panesmith-core/src/detach_encoding/: tests.rs
crates/panesmith-core/src/encoder/: tests.rs
crates/panesmith-core/src/input/: tests.rs
crates/panesmith-core/src/manager/: attach_support.rs  tests.rs
crates/panesmith-core/src/mode_overlay/: tests.rs
crates/panesmith-core/src/pane/: tests.rs
crates/panesmith-core/src/pty/: tests.rs
crates/panesmith-core/src/repro/: tests.rs
crates/panesmith-core/src/transcript/: tests.rs
crates/panesmith-core/src/vt100_surface/: tests.rs
crates/panesmith-core/tests/: send_input.rs
crates/panesmith-ratatui/: Cargo.toml  README.md
crates/panesmith-ratatui/src/: lib.rs  tests.rs  widget.rs
crates/panesmith-ratatui/src/widget/: tests.rs
crates/panesmith-vt100/: Cargo.toml  LICENSE-MIT  README.md
crates/panesmith-vt100/src/: backend.rs  lib.rs  tests.rs
crates/panesmith-vt100/src/backend/: tests.rs
crates/panesmith-vt100/tests/: backend_fixtures.rs
crates/panesmith-vt100/tests/fixtures/surface/: alternate-screen.ansi  alternate-screen.snap  clear-line.ansi  clear-line.snap  clear-screen.ansi  clear-screen.snap  colors.ansi  colors.snap  cursor-moves.ansi  cursor-moves.snap  wrapped-lines.snap
crates/panesmith/examples/: dashboard_two_panes.rs  embedded_shell_minimal.rs  event_consumption.rs  manager_attach.rs  transcript_capture.rs
crates/panesmith/src/: lib.rs  tests.rs
crates/panesmith/tests/: public_docs.rs  release_metadata.rs
docs/: architecture.md  attach.md  embedding.md  events-and-transcripts.md  getting-started.md  release.md  testing.md
examples/attach-shell/: Cargo.toml
examples/attach-shell/src/: main.rs
examples/embedded-shell/: Cargo.toml
examples/embedded-shell/src/: main.rs
fixtures/echo-tui/: Cargo.toml
fixtures/echo-tui/src/: main.rs
fixtures/echo-tui/tests/: blocking_attach.rs  pane_manager_runtime.rs  portable_pty_backend.rs  stress.rs
fixtures/terminal-edge-cases/: Cargo.toml
fixtures/terminal-edge-cases/tests/: embedded_preview_conformance.rs  slash_menu_attach.rs  terminal_edge_cases.rs
fixtures/terminal-edge-cases/tests/support/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
