[package]
name = "panesmith-ratatui"
description = "Ratatui widget rendering for Panesmith terminal panes"
categories = ["command-line-interface", "gui"]
documentation = "https://docs.rs/panesmith-ratatui"
keywords = ["terminal", "tui", "ratatui", "widget", "pty"]
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
targets = []

[dependencies]
panesmith-core.workspace = true
ratatui.workspace = true
