[package]
name = "panesmith"
description = "Embed PTY-backed terminal panes in ratatui hosts with a fullscreen attach path"
categories = ["command-line-interface", "development-tools"]
documentation = "https://docs.rs/panesmith"
keywords = ["pty", "terminal", "tui", "ratatui", "attach"]
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
readme = "README.md"
repository.workspace = true
exclude = [
    "tests/public_docs.rs",
    "tests/release_metadata.rs",
]

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustdoc-args = ["--cfg", "docsrs"]
targets = []

[features]
default = []
crossterm = ["panesmith-attach/crossterm", "panesmith-core/crossterm"]
serde = ["panesmith-core/serde"]

[dependencies]
panesmith-attach.workspace = true
panesmith-core.workspace = true
panesmith-ratatui.workspace = true
panesmith-vt100.workspace = true

[dev-dependencies]
ratatui = { workspace = true, features = ["crossterm"] }
serde_json = "1"
